syntax = "proto2";



import "define.proto";

message Achievement {
    optional uint32 finish_timestamp = 11;
    
    optional Status status = 13;
    enum Status {
        INVALID = 0;
        UNFINISHED = 1;
        FINISHED = 2;
        REWARD_TAKEN = 3;
    }
    
    optional uint32 cur_progress = 12;
    optional uint32 id = 14;
    optional uint32 total_progress = 8;
}

message AchievementAllDataNotify {
    repeated Achievement achievement_list = 4;
    repeated uint32 reward_taken_goal_id_list = 2;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2676;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message AchievementUpdateNotify {
    repeated Achievement achievement_list = 14;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2668;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message TakeAchievementRewardReq {
    repeated uint32 id_list = 13;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2675;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message TakeAchievementRewardRsp {
    repeated uint32 id_list = 7;
    repeated ItemParam item_list = 10;
    optional int32 retcode = 1;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2657;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message TakeAchievementGoalRewardReq {
    repeated uint32 id_list = 5;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2652;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message TakeAchievementGoalRewardRsp {
    optional int32 retcode = 15;
    repeated uint32 id_list = 12;
    repeated ItemParam item_list = 5;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2681;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}
